# tum_fde

fde-22-bonusproject-1/: .gitignore  .gitlab-ci.yml  README.md  team.txt
fde-22-bonusproject-1/include/: JoinQuery.hpp
fde-22-bonusproject-1/src/: JoinQuery.cpp  main.cpp
fde-22-bonusproject-1/test/: JoinQuery.cpp
fde22-bonusproject-2/: .gitignore  README.md  trips.scala
fde22-bonusproject-2/deliverable/: ReturnTrips.scala  ReturnTripsSubmit.scala  ReturnTripsTest.scala  ReturnTripsTestExtended.scala  returntriptest.sbt  submit.sh  test.sh  testExtended.sh
fde22-bonusproject-3/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  team.txt
fde22-bonusproject-3/benchmark/: BenchmarkLeaderboard.cpp
fde22-bonusproject-3/include/: KNN.hpp  Matrix.hpp  Util.hpp
fde22-bonusproject-3/src/: ForTesting.cpp
fde22-bonusproject-3/test/: GraphTests.cpp
